src/objects/Apttus_Config2__TempFilter__c.object
<CustomObject>
    <description>Helps in binding of search filter values.</description>
    <fields>
        <fullName>Apttus_Config2__FieldLabel__c</fullName>
        <description>The label of the Product2 field used in the filter.</description>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldName__c</fullName>
        <description>Name for the Product2 field</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldValue__c</fullName>
        <description>The value of the product field to be used for filtering the search result</description>
        <label>Field Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the field value is selected.</description>
        <inlineHelpText>Select this to filter the search result.</inlineHelpText>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>Temp Filter</label>
    <nameField>
        <label>Temp Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>